Add new blocking scheme heuristics (#51)
Add new blocking scheme heuristics